# z3c.rml

./: .coveragerc  .gitattributes  .gitignore  .meta.toml  .travis.yml  AUTHORS.txt  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  RELEASE.txt  RML-DIFFERENCES.rst  RML-DIFFERENCES.txt  TODOS.txt  bootstrap.py  buildout.cfg  pyproject.toml  setup.cfg  setup.py  test-failures.txt  tox.ini  versions.cfg
.github/workflows/: tests.yml
src/z3c/rml/: DEPENDENCIES.cfg  README.txt  TODO.txt  __init__.py  attr.py  canvas.py  chart.py  directive.py  doclogic.py  document.py  dtd.py  element.py  error.py  features.txt  flowable.py  form.py  interfaces.py  list.py  num2words.py  occurence.py  page.py  pagetemplate.py  pagetemplate.txt  paraparser.py  pdfinclude.py  platypus.py  reference.pt  reference.py  rlfix.py  rml-reference.pt  rml-reference.py  rml.dtd  rml2pdf.py  rml2pdfscript.py  special.py  storyplace.py  stylesheet.py  svg2rlg.py  template.py
src/z3c/rml/tests/: flowable.py  module.py  test_directive.py  test_dtd.py  test_edge.py  test_num2words.py  test_pagetemplate.py  test_reference.py  test_rml.py  test_rml2pdf.py  test_subprocess.py  test_svg2rlg.py
src/z3c/rml/tests/input/: encoding-test-latin1.rml  encoding-test-utf8.rml  printScaling.rml  rml-examples-000-simple.rml  rml-examples-001-cmbox.rml  rml-examples-001-hello.rml  rml-examples-002-paras.rml  rml-examples-003-frames.rml  rml-examples-004-fpt-templates.rml  rml-examples-004-templates.rml  rml-examples-005-fonts.rml  rml-examples-006-barcodes.rml  rml-examples-008-tables.rml  rml-examples-009-splitting.rml  rml-examples-010-linkURL.rml  rml-examples-011-keepwithnext.rml  rml-examples-017-outlines.rml  rml-examples-022-paras-oas.rml  rml-examples-029-keepinframe.rml  rml-examples-031-japanese.rml  rml-examples-032-images.rml  rml-examples-034-cmyk.rml  rml-examples-035-numbering.rml  rml-examples-036-numbering-contd.rml  rml-examples-037-plugingraphic.rml  rml-examples-038-rect-href.rml  rml-examples-039-doc-programming.rml  rml-examples-040-colors.rml  rml-examples-041-masking.rml  rml-examples-042-longdoc.rml  rml-examples-043-headings.rml  rml-examples-044-codesnippets.rml  rml-examples-045-cmyk.rml  rml-examples-046-lists.rml  rml-examples-047-condPageBreak.rml  rml-examples-048-paragraph-flow-controls.rml  rml-examples-049-pre.rml  rml-examples-050-header-footer.rml  rml-guide-example-01.rml  rml-guide-example-02.rml  (+134 more)
src/z3c/rml/tests/input/data/: tag-includePdfPages-edge-dupekey.rml
src/z3c/rml/tests/output/: README.txt
(+2 files in other folders)
